[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/CharacterMover.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/HealthManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/Animal.gd" type="Script" id=3]
[ext_resource path="res://characters/animal_parts/AnimalVisuals.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.1

[node name="Animal" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.55, 0 )
shape = SubResource( 1 )

[node name="Graphics" type="Spatial" parent="."]

[node name="AnimalVisuals" parent="Graphics" instance=ExtResource( 4 )]

[node name="CharacterMover" parent="." instance=ExtResource( 1 )]
move_accel = 1
max_speed = 12

[node name="HealthManager" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
